Make sure width of date selector in search menu is not too big with non-english locales

--- a/skins/classic/common.css
+++ b/skins/classic/common.css
@@ -1308,6 +1308,11 @@ ul.toolbarmenu li.separator_above
   color: #999;
 }
 
+#searchmenu select
+{
+  width: 100%;
+}
+
 #pagejump-selector
 {
   max-height: 250px;
